fixed map on mobile

--- a/map.scss
+++ b/map.scss
@@ -35,7 +35,7 @@ p {
   #cannon-map-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 64px);
     width: 100%;
     overflow-y: scroll;
     align-items: center;
